Replaced deprecated URL constructor